--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1078568301244:ios:8968ece29d9280062b56b9",
-  "FIREBASE_PROJECT_ID": "com-techwiz4-plantpal",
-  "GCM_SENDER_ID": "1078568301244"
+  "GOOGLE_APP_ID": "1:252047642311:ios:47e488614bf2c3d9b7f8e2",
+  "FIREBASE_PROJECT_ID": "com-techwiz4-plantpal-cb3a9",
+  "GCM_SENDER_ID": "252047642311"
 }
