--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.1.0
   provider: ^6.0.5
   firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
 
 dev_dependencies:
   flutter_test:
