--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.7.2
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.4
+  zoom_tap_animation: ^1.1.0
+  iconly: ^1.0.1
 
 dev_dependencies:
   flutter_test:
